# WorkShop-3

./: .gitignore
WORKSHOPP/WORKSHOP4/: README.md  pyproject.toml
workshop3/: Authentication.py  ReporteTecnico.docx  catalog.py  main.py  users.py
workshop3/factories/: engines.py  facade.py  factories.py
workshop3/vehicles/: Flyweight.py  vehicles.py
workshop3/workshop3/: pyvenv.cfg
